--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --config ./build/webpack.demo.js",
-    "build": "webpack --config ./build/webpack.base.js"
+    "build": "webpack --config ./build/webpack.pro.js"
   },
   "repository": {
     "type": "git",
