--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   },
   "homepage": "https://github.com/Richard-Choooou/drag-area#readme",
   "dependencies": {
-    "@babel/runtime": "^7.0.0"
+    "@babel/runtime": "^7.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-loader": "8",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.8.0",
     "clean-webpack-plugin": "^0.1.19",
     "file-loader": "^2.0.0",
