--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/drag-area.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config ./build/webpack.demo.js",
+    "dev": "webpack-dev-server --config ./build/webpack.demo.js --host 0.0.0.0",
     "build": "webpack --config ./build/webpack.pro.js"
   },
   "repository": {
